Make client appear on shiviz visualization
